--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "my-dashboard-app",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "Christophers Digital Solutions",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main"
   },
-  "author": "Chris Carter",
+  "author": "Christopher Carter",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "googleapis": "^100.0.0",
     "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongoose": "^6.2.9",
-    "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.19",
-    "socket.io": "^4.4.1",
+    "mongoose": "^6.11.4",
+    "nodemailer": "^6.9.4",
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.7.1",
     "ws": "^8.5.0"
   }
 }
